modernize getPanels